[package]
name = "momentary_toil"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30", default-features = false }
google-calendar = { version = "0.7.0", default-features = false, features = ["rustls-tls"] }
tokio = "1"
chrono = { version = "0.4.38", default-features = false }
config = { version = "0.14.0", default-features = false }
confy = "0.6.1"
serde = { version = "1.0.204", default-features = false }
rocket = { version = "0.5.1", default-features = false }
clap = { version = "4.5.13", features = ["derive"] }
